test/invalid/baseline/scopedname.txt
Syntax error at line 2 in scopedname.widl:
  typedef gfx::geom::
             ^ Typedef lacks a name
